--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-select": "^5.3.2",
     "react-table": "^7.8.0",
     "read-excel-file": "^5.3.3",
+    "tw-elements": "^1.0.0-beta1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
