--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-foundation": "^0.9.7",
+    "react-router": "^6.11.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
