--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "eslint-config-react-app": "^6.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
@@ -18,12 +19,14 @@
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-foundation": "^0.9.7",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
     "react-table": "^7.8.0",
     "read-excel-file": "^5.3.3",
+    "recharts": "^2.6.2",
     "tw-elements": "^1.0.0-beta1",
     "web-vitals": "^2.1.4"
   },
